<resources>
    <string name="app_name">MePOS Config Lite</string>
    <string name="next">next</string>
    <string name="connect">connect</string>
    <string name="hello">Welcome\nto MePOS</string>
    <string name="mepos_found_lbl">Tap connect to continue</string>
    <string name="mepos_found">MePOS found</string>
    <string name="fmepos_not_found_lbl">Let\'s find your hardware press NEXT\nto continue</string>
    <string name="continue_btn">continue</string>
    <string name="cancel_btn">cancel</string>
    <string name="dialog_advanced_wifi">Only change these options if you have previous\nexperience on network configuration.</string>
    <string name="field_required">Please enter your WiFi password before continue.</string>
    <string name="not_aviliable">N/A</string>
    <string name="wifi_client_config_problem">It appears the Wifi client connection was not established. Please Check your encryption modes and password.</string>
    <string name="it_will_take_a_minute">It will take about one minute to configure, please wait.</string>
    <string name="netmasklbl">Netmask</string>
    <string name="wifiCompleted">Configuration\ncompleted</string>
    <string name="txtCompleted">Your MePOS has successfully joined your WiFi,\nyou can find it at the following IP address:</string>
    <string name="checkPower">Check the MePOS power</string>
    <string name="reconectMePOS">Please try to reconnect MePOS</string>
    <string name="checkrouter">Please check that your router is on</string>
    <string name="cyclepowerMePOS">Please cycle power the MePOS</string>
    <string name="contact">contact</string>
    <string name="meposConfiguration">Would you like to run\n MePOS configuration again?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="close">close</string>
    <string name="print">print</string>
    <string name="ok">OK</string>
    <string name="pleasewait">Please wait.</string>
    <string name="printing">Printing</string>
    <string name="searching">Searching</string>
    <string name="howtext">How would you like to connect\nyour MePOS to your WiFi?</string>
    <string name="wificonfirmmsg">Are you sure you want to change MePOS WiFi mode?</string>
    <string name="dialogwifi_modes_alerttitle">"Wifi configuration"</string>
    <string name="no_mepos">No MePOS connected</string>




    <string name="tap_to_connect">Let´s find your hardware tap NEXT\nto continue</string>
    <string name="mepos_connected">MePOS connected</string>
    <string name="mepos_disconnected">MePOS disconnected</string>
    <string name="usb">USB</string>
    <string name="configure_your">Let\'s configure your</string>
    <string name="wifi">WiFi</string>
    <string name="go">go</string>
    <string name="back">back</string>
    <string name="retry">retry</string>
    <string name="finding_your_mepos">Finding your MePOS now,\nplease wait...</string>
    <string name="progress_circle">progress circle</string>
    <string name="dialog_check_mepos_text">Please check if the MePOS is connected to a power source, please retry once connected</string>
    <string name="dialog_cdisconect_reconect">Please disconnect and reconnect\nthe tablet then tap NEXT to continue</string>
    <string name="dialog_ccontact_support">We\'re sorry, we\'re having trouble finding your MePOS,\nPlease call 24/7 customer support on: 1-800-XXX-XXX</string>
    <string name="wifi_client_title">Tell us about\nyour WiFi network</string>
    <string name="ssid">Your WiFi Network name</string>
    <string name="hintpassword">Your WiFi password</string>
    <string name="encryption">Encryption</string>
    <string name="ip_automatic_dhcp">IP (Automatic DHCP)</string>
    <string name="netmask">255.255.255.0</string>
    <string name="dhcplbl">Ip type</string>
    <string name="dhcp">DHCP</string>
    <string name="automatic">Automatic</string>
    <string name="advacedswitchtxt">Advanced configuration</string>
    <string name="unplug_plug_txt">Unplug and plug the Tablet</string>
    <string name="unplug_power_source">Please unplug the power source and plug it back in, then tap NEXT to continue</string>
    <string name="version_txt">Version %s</string>


    <string-array name="encryptions">
        <item>NONE</item>
        <item>WEP_OPEN</item>
        <item>WEP</item>
        <item>WPA_TKIP</item>
        <item>WPA_AES</item>
        <item>WPA2_TKIP</item>
        <item>WPA2_AES</item>
        <item>WPAWPA2_TKIP</item>
        <item>WPAWPA2_AES</item>
    </string-array>
</resources>
