<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/meposconfig2"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/txtwifiIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/wifi"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_wifi_black_24dp"
            android:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/titleWiFiComplete"
            style="@style/subTxtBlack"
            android:text="@string/wifiCompleted" />

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/lblMessageComplete"
            style="@style/setUpTextGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txtCompleted"
            android:textSize="@dimen/text_size25"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ipFoundTxtComplete"
            style="@style/subTxtBlack"
            android:text="@string/netmask" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonBackwifiComplete"
            style="@style/backbtns"
            android:text="@string/back" />

        <Button
            android:id="@+id/buttonNextComplete"
            style="@style/nextBtns"
            android:text="@string/go" />

    </LinearLayout>

</LinearLayout>
