<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/meposconfig2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/txtwifiIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/wifi"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_wifi_black_24dp"
            android:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/titleWiFiConfirm"
            style="@style/subTxtBlack"
            android:text="@string/wifi_client_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/tablewifidata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/lblssidwifi"
                        style="@style/generalLblTxtBlack"
                        android:text="@string/ssid"
                        android:textColor="@android:color/black" />
                </TableRow>


                <TableRow android:gravity="center_horizontal">

                    <EditText
                        android:id="@+id/txtSsidwifi"
                        style="@style/generalHintTxt"
                        android:hint="@string/ssid" />
                </TableRow>

                <Space android:layout_height="5dp" />

                <TableRow android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/lblpwdwifi"
                        style="@style/generalLblTxtBlack"
                        android:text="@string/hintpassword" />
                </TableRow>

                <TableRow android:gravity="center_horizontal">

                    <EditText
                        android:id="@+id/txtPasswordwifi"
                        style="@style/generalHintTxt"
                        android:hint="@string/hintpassword"
                        android:singleLine="true" />
                </TableRow>

                <Space android:layout_height="5dp" />

                <TableRow android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/lblencryptionwifi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/encryption"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow android:gravity="center_horizontal">

                    <Spinner
                        android:id="@+id/spinnerEncryptionClient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/encryptions"
                        android:minWidth="@dimen/button_width200"
                        android:theme="@style/Spinner" />

                </TableRow>

            </TableLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <Switch
                android:id="@+id/advacedswitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="24dp"
                android:text="@string/advacedswitchtxt"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TableLayout
                android:id="@+id/advacedTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <Space android:layout_height="5dp" />

                <TableRow android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/lblnetmaskwifi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_automatic_dhcp"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow android:gravity="center_horizontal">

                    <EditText
                        android:id="@+id/txtNetmaskwifi"
                        style="@style/generalHintTxt"
                        android:text="@string/netmask"
                        android:visibility="gone" />
                </TableRow>

                <Space android:layout_height="5dp" />

                <TableRow android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/lbldhcpwifi"
                        style="@style/generalLblTxtBlack"
                        android:text="@string/dhcplbl"
                        android:visibility="gone" />
                </TableRow>

                <TableRow android:gravity="center_horizontal">

                    <EditText
                        android:id="@+id/txtIpwifi"
                        style="@style/generalHintTxt"
                        android:text="@string/dhcp"
                        android:visibility="gone" />
                </TableRow>

                <Switch
                    android:id="@+id/autoipbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/automatic"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </TableLayout>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonBackwificonfirm"
            style="@style/backbtns"
            android:text="@string/back" />

        <Button
            android:id="@+id/btncontinueclientwifi"
            style="@style/nextBtns"
            android:text="@string/go" />

    </LinearLayout>
</LinearLayout>