<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/meposconfig5"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

    <TextView
        android:id="@+id/lblLetsConfigure"
        style="@style/setUpTitlesBlack"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size100"
        android:text="@string/configure_your"/>

    <TextView
        android:id="@+id/lblWiFi"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size100"
        android:text="@string/wifi"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/space20" />

    <Button
        android:id="@+id/btngo"
        android:layout_width="@dimen/button_width150"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/go"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size25"
        android:textAllCaps="true"
        android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonBackWiFi"
            style="@style/backbtns"
            android:text="@string/back" />

        <Button
            android:id="@+id/buttonNextWiFi"
            style="@style/nextBtns"
            android:visibility="invisible"
            android:text="@string/next"/>
    </LinearLayout>

</LinearLayout>
