<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/imageDialogLayout"
    android:layout_width="@dimen/dialog_with"
    android:layout_height="@dimen/dialog_height"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textTitleFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/meposConfiguration"
        android:textSize="@dimen/text_size20" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/space20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:paddingRight="@dimen/space35">

        <Button
            android:id="@+id/btnContinueFinal"
            android:layout_width="@dimen/button_width100"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button_bg"
            android:text="@string/yes"
            android:textAllCaps="true"
            android:textColor="@color/colorCosmeticBlue"
            android:textSize="@dimen/text_size20"
            android:visibility="visible" />

        <android.support.v4.widget.Space
            android:layout_width="@dimen/space20"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnCancelFinal"
            android:layout_width="@dimen/button_width100"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button_bg"
            android:text="@string/no"
            android:textAllCaps="true"
            android:textColor="@color/colorCosmeticBlue"
            android:textSize="@dimen/text_size20"
            android:visibility="visible" />
    </LinearLayout>
</LinearLayout>